# pep-detective

./: .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  config.yaml  psedo-data-creation.ipynb  pyproject.toml  sample_path.json
.github/workflow/: test.yaml  tests.yaml
.github/workflows/: test.yaml
.snakemake/metadata/: b3V0cHV0L3JlcG9ydC50c3Y=  dG1wL3NhbXBsZXMvc2FtcGxlMS9zYW1wbGUxLnRzdg==  dG1wL3NhbXBsZXMvc2FtcGxlMS9zcWxpdGUuZGI=  dG1wL3NhbXBsZXMvc2FtcGxlMTAvc2FtcGxlMTAudHN2  dG1wL3NhbXBsZXMvc2FtcGxlMTAvc3FsaXRlLmRi  dG1wL3NhbXBsZXMvc2FtcGxlMTEvc2FtcGxlMTEudHN2  dG1wL3NhbXBsZXMvc2FtcGxlMTEvc3FsaXRlLmRi  dG1wL3NhbXBsZXMvc2FtcGxlMTIvc2FtcGxlMTIudHN2  dG1wL3NhbXBsZXMvc2FtcGxlMTIvc3FsaXRlLmRi  dG1wL3NhbXBsZXMvc2FtcGxlMTMvc2FtcGxlMTMudHN2  dG1wL3NhbXBsZXMvc2FtcGxlMTMvc3FsaXRlLmRi  dG1wL3NhbXBsZXMvc2FtcGxlMTQvc3FsaXRlLmRi  (+89 more)
samples/: smaple10.tsv  smaple11.tsv  smaple12.tsv  smaple16.tsv  smaple19.tsv  smaple2.tsv  smaple21.tsv  smaple24.tsv  smaple26.tsv  smaple29.tsv  smaple33.tsv  smaple34.tsv  smaple35.tsv  smaple4.tsv  smaple40.tsv  smaple41.tsv  smaple42.tsv  smaple45.tsv  smaple46.tsv  smaple47.tsv  smaple50.tsv  smaple6.tsv  smaple7.tsv  smaple8.tsv  smaple9.tsv
src/: common.py
tmp/: smaple1.tsv  smaple13.tsv  smaple14.tsv  smaple15.tsv  smaple17.tsv  smaple18.tsv  smaple20.tsv  smaple22.tsv  smaple23.tsv  smaple25.tsv  smaple27.tsv  smaple28.tsv  smaple3.tsv  smaple30.tsv  smaple31.tsv  smaple32.tsv  smaple36.tsv  smaple37.tsv  smaple38.tsv  smaple39.tsv  smaple43.tsv  smaple44.tsv  smaple48.tsv  smaple49.tsv  smaple5.tsv
workflow/: Snakefile
(+9 files in other folders)
